--- a/style.css
+++ b/style.css
@@ -58,8 +58,36 @@ a>h1{
     box-shadow: 0px 0px 5px #e74c3c;
 }
 
+.whoweare>h2{
+    font-weight: bold;
+    border-bottom: white 2px solid;
+    padding-bottom: 1rem;
+}
+
+.whoweare{
+    max-height: 12rem;
+    overflow: scroll;
+    color: white;
+    background-color: #e74c3c;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #e74c3c;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.suite-1{
+    float: inline-end;
+    margin-top: -1rem;
+    font-weight: bold;
+}
+
+.suite-1>a{
+    color: white;
+}
+
 
 @media (min-width: 576px){
     .menu{
         border: rgb(205, 151, 50) solid 4px;
+    }
 }
