--- a/style.css
+++ b/style.css
@@ -58,13 +58,13 @@ a>h1{
     box-shadow: 0px 0px 5px #e74c3c;
 }
 
-.whoweare>h2{
+.who-we-are>h2{
     font-weight: bold;
     border-bottom: white 2px solid;
     padding-bottom: 1rem;
 }
 
-.whoweare{
+.who-we-are{
     max-height: 12rem;
     overflow: scroll;
     color: white;
@@ -83,6 +83,16 @@ a>h1{
 
 .suite-1>a{
     color: white;
+}
+
+.give-donation{
+    margin: 1rem;
+    margin-bottom: 0;
+}
+
+.give-donation>img{
+    width: 100%;
+    border-radius: 5px;
 }
 
 
