--- a/style.css
+++ b/style.css
@@ -64,6 +64,19 @@ a>h1{
     padding-bottom: 1rem;
 }
 
+.iconCare, .iconInfo{
+    float: right;
+    margin-top: -0.2rem;
+}
+
+.iconInfo{
+    color: white;
+}
+
+.iconCare{
+    color: #e74c3c;
+}
+
 .who-we-are{
     max-height: 12rem;
     overflow: scroll;
@@ -71,7 +84,7 @@ a>h1{
     background-color: #e74c3c;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #e74c3c;
-    margin: 1rem;
+    margin: 0.5rem;
     padding: 1rem;
 }
 
@@ -85,16 +98,51 @@ a>h1{
     color: white;
 }
 
-.give-donation{
-    margin: 1rem;
-    margin-bottom: 0;
+
+.donation-text{
+    overflow: scroll;
+    max-height: 13rem;
+    color: #e74c3c;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #e74c3c;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    padding: 1rem;
 }
+
 
 .give-donation>img{
-    width: 100%;
-    border-radius: 5px;
+    display: none;
 }
 
+.go{
+    margin-left: 1rem;
+    color: #e74c3c;
+}
+
+.go:hover{
+    color:  #e74c3c;
+}
+
+.donation-text>h3{
+    border-bottom: #e74c3c 2px solid;
+    font-weight: bold;
+    padding-bottom: 1rem;
+}
+
+@media (max-width: 360px){
+    .iconInfo, .iconCare{
+        width: 1.5rem;
+    }
+}
+
+@media (max-width: 300px){
+    .iconInfo, .iconCare{
+        display: none;
+    }
+}
 
 @media (min-width: 576px){
     .menu{
