--- a/style.css
+++ b/style.css
@@ -1,51 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Paytone+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 html,
 body,
-.col{
+.col,
+.title{
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
 
-/*
-.col{
-    border: black solid 1px;
+.header-container{
+    padding-left: 0;
+    padding-right: 1rem;
 }
 
-*/
+.header{
+    background-color: #e74c3c;
+    flex-wrap: wrap;
+    min-height: 5rem;
+}
+
+.title{
+    min-width: 8rem;
+    max-width: 8rem;
+    padding: 0.5rem;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    text-align: center;
+    letter-spacing:0px;
+    line-height: 0.5rem;
+    background-color:#e74c3c;
+
+}
+
+
+.title>a{
+    font-family: 'Pacifico', cursive;
+    color: white;
+}
 
 .menu{
-    /* border: yellowgreen solid 1px; */
-    background-image: url(Images/160211_bq4fr_lc-animaux_chien_chat_sn635.jpeg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 8rem;
+    margin-top: 1.5rem;
+    flex-wrap: wrap;
+    padding: 0.5rem;    
 }
 
-.menu-icon, .search-icon{
-    margin: 0.5rem;
-    margin-top: 5.6em;
-    padding: 0.2rem;
-    border-radius: 5px;
-    width: 40px;
-    height: 40px;
-    color: white;
-    background-image: url(../Project-1/Images/444-red-floral-ornament-background-design.jpeg);
-    box-shadow: 0px 0px 5px #e74c3c;
-}
-
-.border-separator{
+.search-menu{
+    margin-right: 0.5rem;
     margin-top: -1rem;
-    margin: auto;
-    width: 90%;
-    border-bottom: #e74c3c solid 2px;
+    flex-wrap: nowrap;
+}
+
+.search-bar{
+    height: 30px;
+    max-width: 12rem;
+    min-width: 5rem;
+}
+
+
+
+.search-button{
+    justify-content: center;
+    height: 30px;
+    border-radius: 5px;
+    border-style: none;
+    background: #e74c3c;
+    color: white;
+}
+
+.search-button:hover{
+    background: rgb(85, 163, 7);
+    transition: all 500ms;
+}
+
+.navig{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.navig>ul{
+    margin: 0;
+    padding: 0.5rem;
+    min-width: 4rem;
+    color: white;
+}
+
+.navig>ul>li{
+    padding: 0;
+    margin: O;
+    min-width: 4rem;
+}
+
+.navig>ul>a{
+    color: white;
+}
+
+.navig>ul>a:hover{
+    z-index: 1;
+    position: absolute;
+    padding-top: 1rem;
 }
 
 .border-separator-2{
@@ -55,16 +109,6 @@ body,
     
 }
 
-a>h1{
-    color: white;
-    background-image: url(../Project-1/Images/444-red-floral-ornament-background-design.jpeg);
-    font-family: 'Fredoka One', cursive;
-    text-align: center;
-    padding: 0.5rem;
-    margin: 1rem;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px #e74c3c;
-}
 
 .who-we-are>h2{
     font-weight: bold;
@@ -74,7 +118,6 @@ a>h1{
 
 .iconCare, .iconInfo{
     float: right;
-    margin-top: -0.2rem;
 }
 
 .iconInfo{
@@ -83,7 +126,6 @@ a>h1{
 
 .iconCare{
     color: #e74c3c;
-    margin-right: 1rem;
 }
 
 .who-we-are{
@@ -110,7 +152,7 @@ a>h1{
 
 .donation-text{
     text-align: center;
-    max-height: 15rem;
+    max-height: 20rem;
     color: #e74c3c;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -153,7 +195,29 @@ a>h1{
     margin-bottom: 1rem;
 }
 
-.event{
+.abbrv{
+    display: none;
+}
+
+@media (max-width: 207px){
+    .menu{
+        justify-content:center !important;
+        margin-bottom: 0.5rem;
+    }
+    .header{
+        flex-wrap: wrap;
+        justify-content:center !important;
+    }
+}
+
+@media (max-width: 280px){
+    .navig{
+        margin-right: 0.5rem;
+    }
+    .navig>ul{
+        font-size: 0.7rem;
+        margin: auto;
+    }
 
 }
 
@@ -167,10 +231,60 @@ a>h1{
     .iconInfo, .iconCare{
         display: none;
     }
+    .menu-icon, .search-icon{
+        width: 20px;
+        height: 20px;
+    }
+}
+
+@media (max-width: 340px){
+    .header{
+        flex-wrap: nowrap;
+    }
+    .navig{
+        display: flex;
+        flex-wrap: nowrap;
+        font-size: 0.8rem;
+        justify-content: center;
+        margin: auto;
+        padding: 0;
+    }
+    .search-bar{
+        width: 8rem;
+    }
+    .navig>ul{
+        margin: 0;
+    }
+}
+
+@media (max-width: 452px){
+    .header-container{
+        margin-right: 1.5rem;
+    }
+    .title>a>h1{
+        display: none;
+    }
+    .abbrv{
+        display: block;
+        margin-left: 0;
+        margin-top: -0.5rem;
+        justify-content:center !important;
+        
+    }
+    .title{
+        min-width: 1rem;
+        max-width: 4rem;
+        padding: 0.5rem;
+        text-align: center;
+        letter-spacing:0px;
+        line-height: 0.5rem;
+        background-color:#e74c3c;
+    }
+    
 }
 
 @media (min-width: 576px){
-    .menu{
-        border: rgb(205, 151, 50) solid 4px;
+    h1{
+        color: black;
     }
 }
