--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 html,
 body,
 .col,
-.title{
+.title,
+.menu2{
     margin: 0;
     padding: 0;
     width: 100%;
@@ -11,13 +12,13 @@ body,
 }
 
 .header-container{
-    padding-left: 0;
     padding-right: 1rem;
 }
 
 .header{
+    display: flex;
     background-color: #e74c3c;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     min-height: 5rem;
 }
 
@@ -25,8 +26,7 @@ body,
     min-width: 8rem;
     max-width: 8rem;
     padding: 0.5rem;
-    margin-left: 1rem;
-    margin-top: 0.5rem;
+    margin: 0;
     text-align: center;
     letter-spacing:0px;
     line-height: 0.5rem;
@@ -38,27 +38,34 @@ body,
 .title>a{
     font-family: 'Pacifico', cursive;
     color: white;
+    transition: all 0.6s;
+}
+
+.title>a:hover{
+    transition: all 0.7s;
+    text-decoration: none;
+    text-shadow: white 0px 0px 1px;
 }
 
 .menu{
-    margin-top: 1.5rem;
+    justify-items: end;
+    margin-right: 0;
+    min-width: 5rem;
+    margin-top: 2rem;
     flex-wrap: wrap;
     padding: 0.5rem;    
 }
 
 .search-menu{
-    margin-right: 0.5rem;
-    margin-top: -1rem;
-    flex-wrap: nowrap;
+    margin-top: -2rem;
 }
 
 .search-bar{
     height: 30px;
-    max-width: 12rem;
+    max-width: 10rem;
     min-width: 5rem;
+    margin-right: 0.5rem;
 }
-
-
 
 .search-button{
     justify-content: center;
@@ -74,33 +81,34 @@ body,
     transition: all 500ms;
 }
 
-.navig{
-    display: flex;
-    flex-wrap: nowrap;
-}
 
 .navig>ul{
-    margin: 0;
+    display: flex;
+    list-style: none;
+    margin-top: 0.5rem;
+}
+
+
+.navig>ul>li>a{
+    color: white;
     padding: 0.5rem;
-    min-width: 4rem;
-    color: white;
+    transition: all 0.6s;
 }
 
-.navig>ul>li{
-    padding: 0;
-    margin: O;
-    min-width: 4rem;
+.navig>ul>li>a:hover{
+    transition: all 0.6s;
+    text-decoration: none;
+    border-radius: 5px;
+    background: white;
+    color: #e74c3c;
+    text-shadow: #e74c3c 0px 0px 2px;
+    box-shadow: white 0px 0px 5px;
 }
 
-.navig>ul>a{
-    color: white;
+.menu2{
+    display: none;
 }
 
-.navig>ul>a:hover{
-    z-index: 1;
-    position: absolute;
-    padding-top: 1rem;
-}
 
 .border-separator-2{
     border-bottom: rgb(184, 181, 181) 2px solid;
@@ -195,31 +203,7 @@ body,
     margin-bottom: 1rem;
 }
 
-.abbrv{
-    display: none;
-}
 
-@media (max-width: 207px){
-    .menu{
-        justify-content:center !important;
-        margin-bottom: 0.5rem;
-    }
-    .header{
-        flex-wrap: wrap;
-        justify-content:center !important;
-    }
-}
-
-@media (max-width: 280px){
-    .navig{
-        margin-right: 0.5rem;
-    }
-    .navig>ul{
-        font-size: 0.7rem;
-        margin: auto;
-    }
-
-}
 
 @media (max-width: 360px){
     .iconInfo, .iconCare{
@@ -227,61 +211,110 @@ body,
     }
 }
 
-@media (max-width: 300px){
-    .iconInfo, .iconCare{
+@media (max-width: 450px){
+    .header{
+        flex-wrap: wrap;
+    }
+
+    .title{
+        min-width: 20%;
+    }
+
+    .navig{
         display: none;
     }
-    .menu-icon, .search-icon{
-        width: 20px;
-        height: 20px;
-    }
-}
 
-@media (max-width: 340px){
-    .header{
-        flex-wrap: nowrap;
+    .menu{
+        align-content: center;
+        flex-wrap: wrap;
+        min-width: 50%;
+        height: 3rem;
+        align-items: center;
+        margin-top: 0;
     }
-    .navig{
+
+    .search-menu{
         display: flex;
-        flex-wrap: nowrap;
-        font-size: 0.8rem;
-        justify-content: center;
-        margin: auto;
-        padding: 0;
-    }
-    .search-bar{
-        width: 8rem;
-    }
-    .navig>ul{
         margin: 0;
     }
-}
 
-@media (max-width: 452px){
-    .header-container{
-        margin-right: 1.5rem;
+    .search-bar{
+        width: 8rem;
+        margin-right:0.5rem;
     }
-    .title>a>h1{
-        display: none;
+
+    .menu2{
+        display: flex;
+        justify-content: flex-end;
+        margin-top: -2rem;
     }
-    .abbrv{
+
+    .wrap-col{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    #wrapper{
+        list-style: none;
+        padding: 0;
+        margin-right: 0.5rem;
+    }
+
+    #wrapper ul{
+        overflow: hidden;
+        max-height: 0rem;
+    }
+
+
+    #wrapper>li>a {
         display: block;
-        margin-left: 0;
-        margin-top: -0.5rem;
-        justify-content:center !important;
+        padding: 0.5rem 4.05rem 0.5rem 4.05rem;
+        color: ivory;
+        border: white 1px solid;
+        border-radius: 5px;
         
     }
-    .title{
-        min-width: 1rem;
-        max-width: 4rem;
-        padding: 0.5rem;
+
+
+    #wrapper li:hover ul {
         text-align: center;
-        letter-spacing:0px;
-        line-height: 0.5rem;
-        background-color:#e74c3c;
+        transition: all ease-out 0.5s;
+        display: block;
+        position: absolute;
+        z-index: 100;
+        border-radius: 5px;
+        box-shadow: 0px 0px 5px #e74c3c;
+        max-height: 20rem;
+        padding: 0;
     }
-    
+
+    #wrapper li:hover ul>li{
+        list-style: none;
+        padding: 0.5rem 2.5rem 0.5rem 2.5rem;
+        border-bottom: #e74c3c;
+        background: white;
+        border-top: #e74c3c 1px solid;
+        
+    }
+
+    #wrapper li:hover li a{
+        padding: 0;
+        text-decoration: none;
+        color: #e74c3c;
+    }
+
+    #wrapper li>a:hover{
+        transition: all 0.25s;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+
+
+
 }
+
 
 @media (min-width: 576px){
     h1{
