--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sniglet&display=swap');
 
 html,
 body,
-.col,
 .title,
 .menu2{
     margin: 0;
@@ -11,40 +10,44 @@ body,
     height: 100%;
 }
 
-.header-container{
-    padding-right: 1rem;
+body{
+    font-family: 'Sniglet', cursive;
 }
+
+.col{
+    margin: 0;
+    padding: 0;
+}
+
 
 .header{
     display: flex;
-    background-color: #e74c3c;
+    background-color: white;
     flex-wrap: nowrap;
     min-height: 5rem;
+    box-shadow: grey 0px 0px 8px;
 }
 
 .title{
-    min-width: 8rem;
     max-width: 8rem;
     padding: 0.5rem;
     margin: 0;
     text-align: center;
     letter-spacing:0px;
     line-height: 0.5rem;
-    background-color:#e74c3c;
-
+    background-color:white;
 }
 
 
 .title>a{
-    font-family: 'Pacifico', cursive;
-    color: white;
+    color: #e74c3c;
     transition: all 0.6s;
 }
 
 .title>a:hover{
     transition: all 0.7s;
     text-decoration: none;
-    text-shadow: white 0px 0px 1px;
+    text-shadow: #e74c3c 0px 0px 1px;
 }
 
 .menu{
@@ -90,7 +93,7 @@ body,
 
 
 .navig>ul>li>a{
-    color: white;
+    color: #e74c3c;
     padding: 0.5rem;
     transition: all 0.6s;
 }
@@ -99,10 +102,10 @@ body,
     transition: all 0.6s;
     text-decoration: none;
     border-radius: 5px;
-    background: white;
-    color: #e74c3c;
-    text-shadow: #e74c3c 0px 0px 2px;
-    box-shadow: white 0px 0px 5px;
+    background: #e74c3c;
+    color: white;
+    text-shadow: white 0px 0px 2px;
+    box-shadow: #e74c3c 0px 0px 5px;
 }
 
 .menu2{
@@ -114,7 +117,6 @@ body,
     border-bottom: rgb(184, 181, 181) 2px solid;
     width: 70%;
     margin: auto;
-    
 }
 
 
@@ -203,7 +205,7 @@ body,
 .icon-dog{
     position: absolute;
     max-width: 4rem;
-    top: 2.3rem;
+    top: 2.2rem;
     right: 2rem;
 
 }
@@ -225,7 +227,6 @@ body,
 .donation-text>h2,
 .who-we-are>h2{
     position: relative;
-    z-index: 1;
     font-weight: bold;
     padding-bottom: 2rem;
     margin-bottom: 1rem;
@@ -240,7 +241,37 @@ body,
     border-bottom: white 2px solid;
 }
 
+.discovery{
+    margin-top: 2rem;
+    min-height: auto;
+    box-shadow: grey 0px 0px 8px;
+}
 
+.discover-us h2{
+    position: absolute;
+    margin-top: 1rem;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.discover-us>article{
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.discover-us img{
+max-width: 100%;
+min-width: 100%;
+}
+
+
+@media(max-width: 312px){
+    .icon-dog{
+        display: none;
+    }
+}
 
 @media (max-width: 360px){
     .iconInfo, .iconCare{
@@ -249,6 +280,11 @@ body,
 }
 
 @media (max-width: 450px){
+
+    body{
+        position: relative;
+    }
+    
     .header{
         flex-wrap: wrap;
     }
@@ -256,6 +292,10 @@ body,
     .title{
         min-width: 20%;
     }
+
+   .main{
+       margin-bottom: 5rem;
+   }
 
     .navig{
         display: none;
@@ -280,22 +320,33 @@ body,
         margin-right:0.5rem;
     }
 
+    .footer{
+        position: fixed;
+        bottom: 0;
+        padding: 0;
+    }
+
+
     .menu2{
         display: flex;
-        justify-content: flex-end;
-        margin-top: -2rem;
+        z-index: 100;
+        width: 100%;
+        height: 100%;
     }
 
     .wrap-col{
         display: flex;
-        justify-content: flex-end;
-        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
 
     #wrapper{
         list-style: none;
+        text-align: center;
         padding: 0;
-        margin-right: 0.5rem;
+        margin-bottom: 0;
+        width: 100%;
+        height: auto;
     }
 
     #wrapper ul{
@@ -307,30 +358,26 @@ body,
     #wrapper>li>a {
         display: block;
         padding: 0.5rem 4.05rem 0.5rem 4.05rem;
-        color: ivory;
-        border: white 1px solid;
-        border-radius: 5px;
-        
+        color: #e74c3c;
+        background-color: white;
+        border-top: #e74c3c 1px solid;        
     }
 
 
     #wrapper li:hover ul {
         text-align: center;
-        transition: all ease-out 0.2s;
+        transition: all ease-out 0.35s;
         display: block;
-        position: absolute;
-        z-index: 100;
-        border-radius: 5px;
-        box-shadow: 0px 0px 5px #e74c3c;
+        position: relative;
         max-height: 20rem;
         padding: 0;
     }
 
     #wrapper li:hover ul>li{
         list-style: none;
-        padding: 0.5rem 2.5rem 0.5rem 2.5rem;
-        border-bottom: #e74c3c;
-        background: white;
+        padding: 0.5rem 2.6rem 0.5rem 2.6rem;
+        border-bottom: white solid 1px;
+        background: #e74c3c;
         border-top: #e74c3c 1px solid;
         
     }
@@ -338,13 +385,23 @@ body,
     #wrapper li:hover li a{
         padding: 0;
         text-decoration: none;
-        color: #e74c3c;
+        color: white;
     }
 
-    #wrapper li>a:hover{
-        transition: all 0.25s;
+    #wrapper ul>li:hover{
+        transition: all ease-out 0.08s;
         text-decoration: none;
         font-weight: bold;
+        font-size: 1.2rem;
+        text-shadow: white 0px 0px 2px;
+    }
+
+    #wrapper li li>a:hover{
+        transition: all 0.35s;
+        text-decoration: none;
+        font-weight: bold;
+        
+
     }
 }
 
