--- a/style-event.css
+++ b/style-event.css
@@ -137,6 +137,10 @@ main{
     padding-top: 1rem;
 }
 
+.row-footer-1{
+    padding-top: 0.5rem;
+}
+
 
 .logo p{
     text-align: center;
@@ -194,9 +198,7 @@ main{
     box-shadow: grey 0px 0px 8px;
 }
 
-.event-title{
-    margin-left: 1rem;
-}
+
 
 
 @media (max-width: 450px){
@@ -335,4 +337,57 @@ main{
     h1{
         color: black;
     }
+    .search-bar{
+        min-width: 10rem;
+    }
+
+    .title{
+        text-align: left;
+    }
+
+}
+
+@media (min-width: 992px) {
+    .main,
+    .header{
+        width: 70%;
+    }
+
+    .header{
+        margin: auto;
+        box-shadow: none;
+    }
+
+    .breadcrumb-item{
+        margin-left: 15%;
+    }
+
+    .breadcrumb .active{
+        margin-left: 0;
+    }
+
+    .title{
+        padding-left: 0;
+    }
+
+
+
+
+}
+
+@media (min-width: 1400px) {
+    .main,
+    .header{
+        width: 50%;
+    }
+
+    .title{
+        margin-top: 1rem;
+    }
+
+
+    .breadcrumb-item{
+        margin-left: 25%;
+    }
+
 }
