--- a/style.css
+++ b/style.css
@@ -1,28 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Sniglet&display=swap');
-
 html,
 body,
 .title,
 .menu2,
 .logo,
-.social{
+.social {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
 
-body{
+body {
     font-family: 'Sniglet', cursive;
 }
 
-.col{
+.col {
     margin: 0;
     padding: 0;
 }
 
-
-.header{
+.header {
     display: flex;
     background-color: white;
     flex-wrap: nowrap;
@@ -30,48 +28,47 @@ body{
     box-shadow: grey 0px 0px 8px;
 }
 
-.title{
+.title {
     max-width: 8rem;
     padding: 0.5rem;
     margin: 0;
     text-align: center;
-    letter-spacing:0px;
+    letter-spacing: 0px;
     line-height: 0.5rem;
-    background-color:white;
+    background-color: white;
 }
 
-
-.title>a{
+.title>a {
     color: #e74c3c;
     transition: all 0.6s;
 }
 
-.title>a:hover{
+.title>a:hover {
     transition: all 0.7s;
     text-decoration: none;
     text-shadow: #e74c3c 0px 0px 1px;
 }
 
-.menu{
+.menu {
     justify-items: end;
     margin-right: 0;
     min-width: 5rem;
     margin-top: 3rem;
     flex-wrap: wrap;
-    padding: 0.5rem;    
+    padding: 0.5rem;
 }
 
-.search-menu{
+.search-menu {
     margin-top: -2rem;
 }
 
-.search-bar{
+.search-bar {
     height: 30px;
     max-width: 10rem;
     margin-right: 0.5rem;
 }
 
-.search-button{
+.search-button {
     transition: all 500ms;
     justify-content: center;
     height: 30px;
@@ -81,26 +78,24 @@ body{
     color: white;
 }
 
-.search-button:hover{
+.search-button:hover {
     background: rgb(85, 163, 7);
     transition: all 500ms;
 }
 
-
-.navig>ul{
+.navig>ul {
     display: flex;
     list-style: none;
     margin-top: 0.5rem;
 }
 
-
-.navig>ul>li>a{
+.navig>ul>li>a {
     color: #e74c3c;
     padding: 0.5rem;
     transition: all 0.6s;
 }
 
-.navig>ul>li>a:hover{
+.navig>ul>li>a:hover {
     transition: all 0.6s;
     text-decoration: none;
     border-radius: 5px;
@@ -110,48 +105,44 @@ body{
     box-shadow: #e74c3c 0px 0px 5px;
 }
 
-.menu2{
+.menu2 {
     display: none;
 }
 
-
-.border-separator-2{
+.border-separator-2 {
     border-bottom: rgb(184, 181, 181) 2px solid;
     width: 70%;
     margin: auto;
 }
 
-
-.who-we-are>h2{
+.who-we-are>h2 {
     font-weight: bold;
     border-bottom: white 2px solid;
     padding-bottom: 1rem;
 }
 
-
-.who-we-are{
+.who-we-are {
     margin: 0.5rem;
     max-height: 20rem;
     border-radius: 5px;
     color: white;
-    background:  #e74c3c;
+    background: #e74c3c;
     padding: 1rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
 
-.suite-1{
+.suite-1 {
     float: inline-end;
     margin-top: -1rem;
     font-weight: bold;
 }
 
-.suite-1>a{
+.suite-1>a {
     color: white;
 }
 
-
-.donation-text{
+.donation-text {
     text-align: center;
     max-height: 20rem;
     color: #e74c3c;
@@ -160,17 +151,15 @@ body{
     padding: 1rem;
 }
 
-
-.content-donation{
+.content-donation {
     padding-top: 1rem;
 }
 
-.give-donation>.img-cat{
+.give-donation>.img-cat {
     display: none;
 }
 
-.icon-cat
-{
+.icon-cat {
     position: absolute;
     z-index: -1;
     top: 0.9rem;
@@ -178,37 +167,35 @@ body{
     max-width: 3rem;
 }
 
-.icon-cat>img{
+.icon-cat>img {
     width: 100%;
 }
 
-.icon-dog{
+.icon-dog {
     position: absolute;
     max-width: 4rem;
     top: 3.2rem;
     right: 2rem;
-
 }
 
-.icon-dog>img{
+.icon-dog>img {
     width: 100%;
 }
 
-
-.go{
+.go {
     transition: all 500ms;
     margin-left: 1rem;
     color: #e74c3c;
 }
 
-.go:hover{
+.go:hover {
     color: rgb(85, 163, 7);
     transition: all 500ms;
 }
 
 .donation-text>h2,
 .who-we-are>h2,
-.event>h2{
+.event>h2 {
     position: relative;
     font-weight: bold;
     padding-bottom: 2rem;
@@ -216,16 +203,16 @@ body{
     text-align: left;
 }
 
-.donation-text>h2{
+.donation-text>h2 {
     border-bottom: #e74c3c 2px solid;
 }
 
-.who-we-are>h2{
+.who-we-are>h2 {
     border-bottom: white 2px solid;
 }
 
 .discovery,
-.event_row{
+.event_row {
     margin-top: 3rem;
     min-height: auto;
     box-shadow: black 0px 0px 8px;
@@ -233,7 +220,7 @@ body{
 }
 
 .discover-us h2,
-.event-col h2{
+.event-col h2 {
     position: absolute;
     margin-top: 1rem;
     color: white;
@@ -241,91 +228,90 @@ body{
     padding: 1rem;
 }
 
-.event-col h2{
+.event-col h2 {
     align-self: flex-end;
 }
 
-.event-col h2 a{
+.event-col h2 a {
     transition: all 0.5s;
     text-decoration: none;
     color: white;
 }
 
-.event-col h2 a:hover{
+.event-col h2 a:hover {
     transition: all 0.5s;
     font-size: 2rem;
 }
 
 .discover-us>article,
-.event-col>article{
+.event-col>article {
     display: flex;
     justify-content: center;
     max-width: 100%;
     max-height: 100%;
 }
 
-.event article{
+.event article {
     display: flex;
 }
 
 .discover-us img,
-.event img{
-max-width: 100%;
-min-width: 100%;
+.event img {
+    max-width: 100%;
+    min-width: 100%;
 }
 
-.event img{
+.event img {
     border-radius: 5px;
-    box-shadow:black 0px 0px 8px;
+    box-shadow: black 0px 0px 8px;
 }
 
-.event{
+.event {
     border-radius: 10px;
     margin: 2rem 0.5rem 2rem 0.5rem;
     text-align: center;
 }
 
-.event p{
+.event p {
     margin-top: 0.5rem;
     position: absolute;
     color: white;
 }
 
-.newsletter{
+.newsletter {
     margin-top: 3rem;
     margin-bottom: 3rem;
     text-align: center;
 }
 
-.newsletter h3{
+.newsletter h3 {
     margin-bottom: 2rem;
 }
 
-.footer-1{
+.footer-1 {
     background-color: black;
     margin-top: 3rem;
 }
 
-.row-footer{
+.row-footer {
     padding-top: 1rem;
 }
 
-.row-footer-1{
+.row-footer-1 {
     padding-top: 0.5rem;
 }
 
-
-.social{
+.social {
     display: flex;
     justify-content: center;
 }
 
-.social svg{
+.social svg {
     margin: 0.5rem;
     color: white;
 }
 
-.mention{
+.mention {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -336,57 +322,46 @@ min-width: 100%;
     padding-right: 0.7rem;
 }
 
-.mention li{
+.mention li {
     padding: 0.5rem;
 }
 
-.mention li a{
+.mention li a {
     color: white;
 }
 
-.mention li a:hover{
+.mention li a:hover {
     text-decoration: none;
 }
 
-.separator{
+.separator {
     align-self: center;
     color: white;
 }
 
-
-
-
-@media(max-width: 312px){
-    .icon-dog{
+@media(max-width: 312px) {
+    .icon-dog {
         display: none;
     }
 }
 
-
-@media (max-width: 450px){
-
-
-    body{
+@media (max-width: 450px) {
+    body {
         position: relative;
     }
-    
-    .header{
+    .header {
         flex-wrap: wrap;
     }
-
-    .title{
+    .title {
         min-width: 20%;
     }
-
-   .main{
-       margin-bottom: 1rem;
-   }
-
-    .navig{
+    .main {
+        margin-bottom: 1rem;
+    }
+    .navig {
         display: none;
     }
-
-    .menu{
+    .menu {
         align-content: center;
         flex-wrap: wrap;
         min-width: 50%;
@@ -394,39 +369,32 @@ min-width: 100%;
         align-items: center;
         margin-top: 0;
     }
-
-    .search-menu{
+    .search-menu {
         display: flex;
         margin: 0;
         margin-top: 2rem;
     }
-
-    .search-bar{
+    .search-bar {
         width: 8rem;
-        margin-right:0.5rem;
+        margin-right: 0.5rem;
     }
-
-    .footer-2{
+    .footer-2 {
         position: fixed;
         bottom: 0;
         padding: 0;
     }
-
-
-    .menu2{
+    .menu2 {
         display: flex;
         z-index: 100;
         width: 100%;
         height: 100%;
     }
-
-    .wrap-col{
+    .wrap-col {
         display: flex;
         justify-content: center;
         width: 100%;
     }
-
-    #wrapper{
+    #wrapper {
         list-style: none;
         text-align: center;
         padding: 0;
@@ -434,22 +402,17 @@ min-width: 100%;
         width: 100%;
         height: auto;
     }
-
-    #wrapper ul{
+    #wrapper ul {
         overflow: hidden;
         max-height: 0rem;
     }
-
-
     #wrapper>li>a {
         display: block;
         padding: 0.5rem 4.05rem 0.5rem 4.05rem;
         color: #e74c3c;
         background-color: white;
-        border-top: #e74c3c 1px solid;        
+        border-top: #e74c3c 1px solid;
     }
-
-
     #wrapper li:hover ul {
         text-align: center;
         transition: all ease-out 0.35s;
@@ -458,94 +421,75 @@ min-width: 100%;
         max-height: 20rem;
         padding: 0;
     }
-
-    #wrapper li:hover ul>li{
+    #wrapper li:hover ul>li {
         list-style: none;
         padding: 0.5rem 2.6rem 0.5rem 2.6rem;
         border-bottom: white solid 1px;
         background: #e74c3c;
         border-top: #e74c3c 1px solid;
-        
     }
-
-    #wrapper li:hover li a{
+    #wrapper li:hover li a {
         padding: 0;
         text-decoration: none;
         color: white;
     }
-
-    #wrapper ul>li:hover{
+    #wrapper ul>li:hover {
         transition: all ease-out 0.08s;
         text-decoration: none;
         font-weight: bold;
         font-size: 1.2rem;
         text-shadow: white 0px 0px 2px;
     }
-
-    #wrapper li li>a:hover{
+    #wrapper li li>a:hover {
         transition: all 0.35s;
         text-decoration: none;
         font-weight: bold;
     }
-
-    .footer-1{
+    .footer-1 {
         margin-top: 3rem;
         margin-bottom: 2.7rem;
     }
-    
-
 }
 
-
-@media (min-width: 576px){
-    h1{
+@media (min-width: 576px) {
+    h1 {
         color: black;
     }
-    .search-bar{
+    .search-bar {
         min-width: 10rem;
     }
-    .title{
+    .title {
         text-align: left;
     }
-
 }
 
 @media (min-width: 992px) {
     .main,
-    .header{
+    .header {
         width: 70%;
     }
-
-    .header{
+    .header {
         margin: auto;
         box-shadow: none;
     }
-
-    .breadcrumb-item{
+    .breadcrumb-item {
         margin-left: 15%;
     }
-
-    .title{
+    .title {
         padding-left: 0;
     }
-
-
 }
 
 @media (min-width: 1400px) {
     .main,
-    .header{
+    .header {
         width: 50%;
     }
-
-    .title{
+    .title {
         margin-top: 1rem;
         padding-left: 0;
     }
-
-
-    .breadcrumb-item{
+    .breadcrumb-item {
         margin-left: 25%;
     }
-
 }
